Implemented the execution of proofs in jobs. If enabled, the jobs will interrupt and restart automatically when a new build is required.